[gd_scene load_steps=6 format=3 uid="uid://d3osoxp65yl1q"]

[ext_resource type="Texture2D" uid="uid://b7yoblc77jdpc" path="res://img/townhall.png" id="1_sfc8w"]
[ext_resource type="Script" path="res://Scripts/slave_shop.gd" id="2_7bmvn"]
[ext_resource type="PackedScene" uid="uid://b18nn4lhff7bi" path="res://Scenes/summon_aura.tscn" id="3_p2kdi"]
[ext_resource type="PackedScene" uid="uid://ctjjekc816lvj" path="res://Scenes/hpbar.tscn" id="4_po4sk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_esqoi"]
radius = 189.309

[node name="SlaveShop" type="Sprite2D" groups=["Targets"]]
z_index = 3
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_sfc8w")
centered = false
offset = Vector2(-500, -900)
script = ExtResource("2_7bmvn")

[node name="SummonAura" parent="." instance=ExtResource("3_p2kdi")]
scale = Vector2(2.708, 2.708)

[node name="HPBar" parent="." instance=ExtResource("4_po4sk")]
offset_left = 3.0
offset_top = 73.0
offset_right = 3.0
offset_bottom = -471.0
max_health = 1000
health = 1000

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(20.4778, -140)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-32.4232, 137)
scale = Vector2(1, 0.8)
shape = SubResource("CircleShape2D_esqoi")

[connection signal="body_entered" from="SummonAura" to="." method="_on_summon_aura_body_entered"]
[connection signal="body_exited" from="SummonAura" to="." method="_on_summon_aura_body_exited"]
[connection signal="death" from="HPBar" to="." method="die"]
